--- a/js2/package.json
+++ b/js2/package.json
@@ -6,7 +6,8 @@
         "@solana/web3.js": "^1.98.0",
         "express": "^4.21.2",
         "express-async-errors": "^3.1.1",
-        "solana": "^3.0.0"
+        "solana": "^3.0.0",
+        "web3": "^4.16.0"
     },
     "devDependencies": {
         "@types/express": "^5.0.0",
