--- a/js2/package.json
+++ b/js2/package.json
@@ -4,6 +4,7 @@
         "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
         "@solana/spl-token": "^0.4.12",
         "@solana/web3.js": "^1.98.0",
+        "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-async-errors": "^3.1.1",
         "solana": "^3.0.0",
