--- a/js2/package.json
+++ b/js2/package.json
@@ -1,9 +1,13 @@
 {
     "type": "module",
     "dependencies": {
+        "@metaplex-foundation/js": "^0.20.1",
         "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
+        "@metaplex-foundation/umi": "^1.1.1",
+        "@metaplex-foundation/umi-bundle-defaults": "^1.1.1",
         "@solana/spl-token": "^0.4.12",
         "@solana/web3.js": "^1.98.0",
+        "cors": "^2.8.5",
         "express": "^4.21.2",
         "express-async-errors": "^3.1.1",
         "solana": "^3.0.0",
