--- a/js2/package.json
+++ b/js2/package.json
@@ -2,7 +2,7 @@
     "type": "module",
     "dependencies": {
         "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
-        "@solana/spl-token": "^0.4.12",
+        "@solana/spl-token": "^0.4.14",
         "@solana/web3.js": "^1.98.0",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
@@ -12,7 +12,8 @@
     },
     "devDependencies": {
         "@types/express": "^5.0.0",
+        "@types/node": "^24.5.2",
         "eslint": "^9.21.0",
-        "typescript": "^5.8.2"
+        "typescript": "^5.9.2"
     }
 }
